fixed navbar menu collapse

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,4 +67,15 @@ body {
     margin-bottom:60px;
 }
 
+#logo {
+    color: white;
+}
+
+.navbar-collapse {
+    flex-grow:0;
+}
+
+
+
+
 
